// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_1_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_1_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_4_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_4_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_f_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_f_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_i_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_i_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="_r_u_-hint"
                aria-invalid="true"
                class="styles__9pjq8o2"
                id="_r_u_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_u_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby="_r_11_-hint"
                aria-invalid="true"
                class="styles__9pjq8o2"
                id="_r_11_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_11_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n style_undefined_compound_72__m4c9ow3f"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_m_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_m_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_p_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_p_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <legend
              class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_8_"
                name="Checkbox."
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_8_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_b_"
                name="Checkbox."
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_b_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <fieldset
        class="styles__19cjf6j0"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.75rem_xxsmall__toi52u5p styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <legend
                class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
              >
                Label
              </legend>
              <span
                class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_8__m4c9ow1n style_undefined_compound_72__m4c9ow3f"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_17_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_17_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__19cjf6j1 styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_1a_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
                    for="_r_1a_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
